[gd_scene load_steps=7 format=2]

[ext_resource path="res://Source/Main/Main.gd" type="Script" id=1]
[ext_resource path="res://Source/Characters/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Source/Characters/Enemy/EnemyBongo.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/bg.png" type="Texture" id=4]
[ext_resource path="res://Source/waves/wave1.tscn" type="PackedScene" id=5]
[ext_resource path="res://Source/waves/wave2.tscn" type="PackedScene" id=6]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
max_speed = 42666

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -100

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerBulletTimer" type="Timer" parent="."]
wait_time = 0.001
one_shot = true
autostart = true

[node name="wave1" parent="." instance=ExtResource( 5 )]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 997.888, 981.602 )

[node name="EnemyBongo" parent="." instance=ExtResource( 3 )]
position = Vector2( 999.41, 559.745 )

[node name="wave2" parent="." instance=ExtResource( 6 )]
